--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>
 <a id="karma-research" class="anchor" href="#karma-research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>KARMA research</h2>
 <p>KARMA is a research unit in the <a href="https://cs.vu.nl/en/index.aspx">Computer Science department</a> at the Vrije Universiteit of Amsterdam.
-Lead by <a href="http://www.jacopourbani.it/">Jacopo Urbani</a>, it focuses on scalable Knowledge Acquisition, Reasoning, and Management.</p>
+Led by <a href="http://www.jacopourbani.it/">Jacopo Urbani</a>, it focuses on scalable Knowledge Acquisition, Reasoning, and Management.</p>
 <h3>
 <a id="selected-projects" class="anchor" href="#selected-projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Selected Projects</h3>
 <ul>
